--- a/android/build.gradle
+++ b/android/build.gradle
@@ -31,7 +31,7 @@ repositories {
 
 dependencies {
     compile 'com.facebook.react:react-native:+'
-    compile ('com.facebook.android:facebook-android-sdk:4.16.+'){
+    compile ('com.facebook.android:facebook-android-sdk:4.38.1'){
         exclude group: 'com.parse.bolts', module: 'bolts-android';
         exclude group: 'com.parse.bolts', module: 'bolts-applinks';
         exclude group: 'com.parse.bolts', module: 'bolts-tasks';
